# text2video

./: .gitignore  AGENTS.md  README.md  README_ZH.md  pyproject.toml  vimax  web_server.py
agents/: camera_image_generator.py  character_extractor.py  character_portraits_generator.py  reference_image_selector.py  screenwriter.py
configs/: idea2video.yaml  script2video.yaml
interfaces/: image_output.py
pipelines/: idea2video_pipeline.py  script2video_pipeline.py
tests/: test_dashscope_generators.py  test_pipeline_configs.py  test_reference_limits.py  test_web_server.py
tools/: __init__.py  dashscope_common.py  image_generator_dashscope_api.py  protocols.py  render_backend.py  video_generator_dashscope_api.py
utils/: provider_presets.py
web/: app.js  index.html  styles.css
